--- a/src/css/findTicketsWidget.css
+++ b/src/css/findTicketsWidget.css
@@ -32,10 +32,11 @@
 }
 
 .pic-refresh{
-    width: 50px;
-    height: 50px;
+    width: 30px;
+    height: 30px;
     background-image: url("../../public/images/reload.png");
-    background-size: 50px;
+    filter: invert(100%);
+    background-size: 30px;
 }
 div > h3 {
     font-size: 30px;
