add: how it works

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,7 @@
 @import url("../css/logo.css");
 @import url("../css/findTicketsWidget.css");
 @import url("../css/aboutUs.css");
+@import url("../css/howItWorks.css");
 
 section {
     display: block;
