--- a/src/css/main.css
+++ b/src/css/main.css
@@ -4,6 +4,7 @@
 @import url("../css/findTicketsWidget.css");
 @import url("../css/aboutUs.css");
 @import url("../css/howItWorks.css");
+@import url("../css/feedback.css");
 
 section {
     display: block;
