--- a/src/components/pages/sections/footer/css/footer.css
+++ b/src/components/pages/sections/footer/css/footer.css
@@ -31,3 +31,109 @@ footer > div{
     max-width: 200px;
     text-align: left;
 }
+
+.subscribe {
+    text-align: left;
+}
+
+.footer-contacts h3 {
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+    font-style: normal;
+}
+
+.subscribe-form label {
+    color: #E5E5E5;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.form-container {
+    margin-top: 10px;
+}
+
+#subscribe-email {
+    width: 447px;
+    padding: 17px 21px;
+    font-size: 24px;
+    margin-right: 30px;
+    border-radius: 3px;
+}
+
+.subscribe-form-btn {
+    width: 169px;
+    color: #E5E5E5;
+    font-size: 24px;
+    text-transform: uppercase;
+    background-color: transparent;
+    border: 1px solid #fff;
+    border-radius: 3px;
+    padding: 17px 11px;
+    box-sizing: border-box;
+    cursor: pointer;
+}
+
+.social-list {
+    width: 424px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.social-link {
+    display: block;
+    width: 40px;
+    height: 40px;
+    background-repeat: no-repeat;
+    background-position: center;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.social-link-youtube{
+    background-image: url("../../footer/img/youtube.png");
+}
+
+.social-link-youtube:hover{
+     background-image: url("../../footer/img/youtube-active.png");
+ }
+
+.social-link-linkedin{
+    background-image: url("../../footer/img/in.png");
+}
+
+.social-link-linkedin:hover{
+     background-image: url("../../footer/img/in-active.png");
+ }
+
+.social-link-google{
+    background-image: url("../../footer/img/google.png");
+    width: 48px;
+}
+
+.social-link-google:hover{
+    background-image: url("../../footer/img/google-active.png");
+    width: 48px;
+}
+
+.social-link-facebook{
+    background-image: url("../../footer/img/fb.png");
+}
+
+.social-link-facebook:hover{
+    background-image: url("../../footer/img/fb-active.png");
+}
+
+.social-link-twitter{
+    background-image: url("../../footer/img/tw.png");
+}
+
+.social-link-twitter:hover{
+    background-image: url("../../footer/img/tw-active.png");
+}
