--- a/src/components/pages/sections/footer/css/footer.css
+++ b/src/components/pages/sections/footer/css/footer.css
@@ -7,24 +7,41 @@ footer{
 
 footer > div{
     width: 1350px;
-    margin: 0 auto;
-
     display: flex;
     flex-direction: row;
 
     justify-content: space-around;
+    margin: 0 auto 50px;
+}
+
+.contact-us > h3, .subscribe > h3{
+    color: #fff;
+    font-size: 30px;
+    font-weight: 500;
+    font-style: normal;
 }
 
 .contact-us-item{
     display: flex;
     flex-direction: row;
+
+    margin-bottom: 27px;
+    cursor: pointer;
 }
 
 .contact-us-item > img{
-    margin-right: 10px;
+    margin-right: 40px;
+    width: 30px;
+    height: 30px;
+}
+.contact-us-item:last-child > img{
+    width: 25px;
+    height: 30px;
+    margin-right: 40px;
 }
 
-.contact-us-item > span{
+
+.contact-us-item > div{
     color: #E5E5E5;
     font-size: 24px;
     font-weight: 400;
@@ -72,6 +89,12 @@ footer > div{
     padding: 17px 11px;
     box-sizing: border-box;
     cursor: pointer;
+}
+
+.subscribe-form-btn:hover {
+    background-color: #FFCA62;
+    color: #2D2B2F;
+    border-color: #FFCA62;
 }
 
 .social-list {
