--- a/src/components/pages/sections/footer/css/footer_bottom.css
+++ b/src/components/pages/sections/footer/css/footer_bottom.css
@@ -1,13 +1,20 @@
+.footer-bottom{
+    display: flex;
+    flex-direction: column;
+    background-color: #2D2B2F;
+}
+
 .footer-line {
-    width: 100%;
+    height: 3px;
     border: 1px solid #E5E5E5;
+    background-color: white;
     margin-bottom: 22px;
 }
 
 .copyrights-container {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-bottom: 33px;
 }
