--- a/src/css/navigationMenu.css
+++ b/src/css/navigationMenu.css
@@ -1,5 +1,4 @@
 .main-menu{
-    width: 100vw;
     background-color: #292929;
 }
 
@@ -10,14 +9,15 @@
     justify-content: flex-start;
 }
 
-.main-menu-list{margin-left: 100px}
+.main-menu-list{
+    margin-left: 100px
+}
 
 
 li{
     list-style-type: none;
     margin-left: 0;
     padding-left: 0;
-    margin-right: 50px;
     margin-right: 50px;
 }
 
