--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,12 +1,13 @@
 @import url("../css/navigationMenu.css");
 @import url("../css/mainPage.css");
 @import url("../css/logo.css");
-@import url("../css/findTicketsWidget.css");
+@import url("../components/pages/sections/findTickets/css/findTicketsWidget.css");
 @import url("../components/pages/sections/aboutUs/css/aboutUs.css");
 @import url("../css/howItWorks.css");
 @import url("../components/pages/sections/feedback/css/feedback.css");
 @import url("../components/pages/sections/footer/css/footer.css");
 @import url("../components/pages/sections/footer/css/footer_bottom.css");
+@import url("../components/pages/sections/findTickets/css/progressbar.css");
 
 section{
     display: flex;
