--- a/src/components/pages/sections/ticketResults/css/ticket-results.css
+++ b/src/components/pages/sections/ticketResults/css/ticket-results.css
@@ -13,6 +13,7 @@
 .offers-list{
     display: flex;
     flex-direction: column;
+    width: 800px;
     margin-left: auto;
     margin-right: auto;
 }
