add time filters

--- a/src/components/pages/sections/ticketResults/filter/filter.css
+++ b/src/components/pages/sections/ticketResults/filter/filter.css
@@ -2,6 +2,7 @@
 @import url("./dateFilter/date-filter.css");
 @import url("./costFilter/costFilter.css");
 @import url("./costFilter/slider/slider.css");
+@import url("./there_and_back/departure/departureTimeFilter.css");
 
 .filter {
     display: flex;
