add: seats selection

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -9,6 +9,7 @@
 @import url("../components/pages/sections/footer/css/footer_bottom.css");
 @import url("../components/pages/sections/findTickets/css/progressbar.css");
 @import url("../components/pages/sections/ticketResults/css/ticket-results.css");
+@import url("../components/pages/sections/seatSelection/seatSelection.css");
 
 section{
     display: flex;
