--- a/src/components/pages/sections/seatSelection/seatSelection.css
+++ b/src/components/pages/sections/seatSelection/seatSelection.css
@@ -1,8 +1,8 @@
 @import url("../seatSelection/getBack/getback.css");
 @import url("../seatSelection/train_info/trainInfo.css");
 @import url("../seatSelection/tickets_number/ticketsNumber.css");
-@import url("../seatSelection/wagon/type.css");
-@import url("../seatSelection/wagon/wagonInfo.css");
+@import url("./wagon/css/type.css");
+@import url("./wagon/css/wagonInfo.css");
 
 .seats-selection-wrapper{
     display: flex;
