--- a/src/css/mainPage.css
+++ b/src/css/mainPage.css
@@ -5,6 +5,8 @@
     background-position: center center;
     background-repeat: no-repeat;
     position: relative;
+    background-size: cover;
+    background-color: #000000;
 }
 
 .bgr1{
