--- a/src/css/main.css
+++ b/src/css/main.css
@@ -14,6 +14,9 @@
 @import url("../components/pages/sections/passengers/passenger.css");
 @import url("../components/pages/sections/payment/payment.css");
 @import url("../components/pages/sections/confirmation/confirm.css");
+@import url("../components/pages/sections/thanksPage/thnx.css");
+
+
 
 section{
     display: flex;
