--- a/src/css/mainPage.css
+++ b/src/css/mainPage.css
@@ -16,3 +16,8 @@
 .bgr2{
     background-image: url("../../public/train_header2.png");
 }
+
+
+.bgr3{
+    background-image: url("../../public/thnx.png");
+}
