--- a/src/components/pages/sections/ticketResults/filter/costFilter/slider/slider.css
+++ b/src/components/pages/sections/ticketResults/filter/costFilter/slider/slider.css
@@ -59,9 +59,7 @@
     transform: rotate(45deg);
     position: absolute;
     top: -45px;
-    /*left:45px*/
-
-;
+    /*left:45px*/;
 }
 
 .output p {
