--- a/src/components/pages/sections/findTickets/css/progressbar.css
+++ b/src/components/pages/sections/findTickets/css/progressbar.css
@@ -11,6 +11,7 @@
     width: 25%;
     height: 100px;
     background-color: #3e3c41;
+    position: relative;
 }
 
 .stage.active {
@@ -19,20 +20,6 @@
 
 .stage > span, .stage > div {
     margin: auto;
-}
-
-.stage-arrow {
-    width: 0;
-    height: 0;
-    border: 3px solid transparent;
-    border-bottom-width: 50px;
-    border-top-width: 50px;
-    border-left: 37px solid white;
-}
-
-.stage-arrow.active {
-    border-left: 37px solid #FFA800;
-    background-color: #3e3c41;
 }
 
 .number {
@@ -54,4 +41,22 @@
 .stage-title {
     font-size: 30px;
     font-weight: 700;
+}
+
+.stage-arrow.inactive{
+    border-left: 40px solid #3e3c41;
+}
+.stage-arrow.active {
+    border-left: 40px solid #FFA800;
+}
+
+
+.stage-arrow{
+    width: 0;
+    height: 0;
+    border-top: 50px solid transparent;
+    border-bottom: 50px solid transparent;
+    position: absolute;
+    right: -40px;
+    z-index: 2;
 }
