upd aboutus css

--- a/src/components/pages/sections/aboutUs/css/aboutUs.css
+++ b/src/components/pages/sections/aboutUs/css/aboutUs.css
@@ -1,6 +1,5 @@
 .info-section {
     display: flex;
-
     background-color: #fff;
     padding-top: 145px;
     padding-bottom: 80px;
@@ -8,6 +7,7 @@
 }
 
 .info-container {
+    width: 1350px;
     margin: 0 auto;
 }
 
