--- a/src/css/logo.css
+++ b/src/css/logo.css
@@ -2,5 +2,7 @@
     display: flex;
     color: white;
     font-size: 32px;
-    margin-left: 0;
+    width: 1350px;
+    margin-left: auto;
+    margin-right: auto;
 }
