--- a/src/css/navigationMenu.css
+++ b/src/css/navigationMenu.css
@@ -6,13 +6,11 @@
     display: flex;
     flex-direction: row;
     color: white;
-    justify-content: flex-start;
+    width: 1350px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 0px;
 }
-
-.main-menu-list {
-    margin-left: 100px
-}
-
 
 li {
     list-style-type: none;
