--- a/src/components/pages/3_seats_selection_page/sections/train_info/css/style.css
+++ b/src/components/pages/3_seats_selection_page/sections/train_info/css/style.css
@@ -29,7 +29,7 @@
     display: flex;
     flex-direction: column;
     align-items: flex-start;
-    margin-right: auto;
+    margin: auto;
 }
 
 .train-name .train-number {
