add offers page: partition by

--- a/src/components/pages/2_offers_page/css/style.css
+++ b/src/components/pages/2_offers_page/css/style.css
@@ -11,6 +11,11 @@
 .offers-list {
     display: flex;
     flex-direction: column;
+}
+
+.offers_wrap{
+    display: flex;
+    flex-direction: column;
     width: 800px;
     margin-left: auto;
     margin-right: auto;
