--- a/src/components/commons/mySlider/custom.css
+++ b/src/components/commons/mySlider/custom.css
@@ -9,7 +9,7 @@
 .custom_slider {
     position: relative;
     width: 100%;
-    height: 5px;
+    height: 15px;
 }
 
 .custom_slider__track,
@@ -21,7 +21,7 @@
 
 .custom_slider__track,
 .custom_slider__range{
-    height: 5px;
+    height: 15px;
 }
 
 .custom_slider__track,
@@ -30,13 +30,15 @@
 }
 
 .custom_slider__track {
-    background-color: #ced4da;
+    background-color: transparent;
     width: 100%;
+    border: 1px solid black;
+    border-radius: 8px;
     z-index: 1;
 }
 
 .custom_slider__range {
-    background-color: #9fe5e1;
+    background-color: #FFA800;
     z-index: 2;
 }
 
@@ -65,7 +67,6 @@
 .thumb {
     pointer-events: none;
     position: absolute;
-    height: 0;
     width: 100%;
     outline: none;
     background-color: transparent;
