--- a/src/components/pages/2_routes_section/sections/filter/css/filterTop.css
+++ b/src/components/pages/2_routes_section/sections/filter/css/filterTop.css
@@ -8,7 +8,7 @@
     font-weight: 400;
 }
 
-.offers_sort {
+.routes_sort {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
