--- a/src/components/pages/2_routes_section/css/style.css
+++ b/src/components/pages/2_routes_section/css/style.css
@@ -8,12 +8,12 @@
 
 }
 
-.offers-list {
+.routes-list {
     display: flex;
     flex-direction: column;
 }
 
-.offers_wrap{
+.routes_wrap{
     display: flex;
     flex-direction: column;
     width: 800px;
