--- a/src/components/pages/2_routes_section/sections/partition/css/style.css
+++ b/src/components/pages/2_routes_section/sections/partition/css/style.css
@@ -12,12 +12,27 @@
     margin: 5px;
 
     align-items: center;
-    border: 1px solid black;
+    border: 2px solid #C4C4C4;
+    border-radius: 4px;
+    color: #928F94;
 
+    cursor: pointer;
+}
 
+.pagination_item:hover{
+    border-color: #FFA800;
+    border-width: 2px;
+    color: #FFA800;
 }
 
 .pagination_arrow{
     width: 30px;
     height: 30px;
+    filter: grayscale(0.5);
+}
+
+.pagination_item.active{
+    border-color: #FFA800;
+    background-color: #FFA800;
+    color: white
 }
